--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -1,4 +1,4 @@
-name: Build CI - Linux
+name: Bulid CI - Linux
 
 on:
   push:
@@ -13,11 +13,5 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: configure
-      run: ./configure
-    - name: make
-      run: make
-    - name: make check
-      run: make check
-    - name: make distcheck
-      run: make distcheck
+    - name: Bulid
+      run: make - 3_Implementation  
