--- a/.github/workflows/Unit_test.yml
+++ b/.github/workflows/Unit_test.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make
-      run: make -C 3_Implementation/ test/test_OB.c
+      run: make -C 3_Implementation/ test/test_voting.c
