--- a/.github/workflows/Valgrind.yml
+++ b/.github/workflows/Valgrind.yml
@@ -15,7 +15,7 @@ jobs:
     
   
     - name: make test
-      run: make -C 3_Implementation/ test/test_OB.c
+      run: make -C 3_Implementation/ test/test_voting.c
     - name: Valgrid
       run: 
           echo Add other actions to build,
